# fstars

./: .Rbuildignore  .gitattributes  .gitignore  DESCRIPTION  NAMESPACE  README.md  config.status  configure  configure.ac  proj_conf_test
R/: RcppExports.R  proj_factors.R
autom4te.cache/: output.0  requests  traces.0
man/: get_factors.Rd  interpolate_xy.Rd  st_convolve.Rd  st_deriv.Rd  st_filter.Rd  test_rproj.Rd
proj_conf_test.dSYM/Contents/Resources/DWARF/: proj_conf_test
src/: Makevars  Makevars.in  Makevars.win  RcppExports.cpp  fstars.cpp  surface.cpp  zevenbergen.cpp
temp/: aspect.tif  aspect_a.tif  cland.tif.aux.xml  clandp.tif.aux.xml  filtered.tif  filtered.tif.aux.xml  filtered_a.tif  slope.tif  slope.tif.aux.xml  slope_evans.tif  slope_evans_fix.tif  slope_evans_fix.tif.aux.xml  slope_flor.tif  slope_flor.tif.aux.xml  slope_flor_zeven_diff.tif  slope_zeven.tif  slope_zeven.tif.aux.xml  slope_zeven_fix.tif  slope_zeven_fix.tif.aux.xml  slopes.qgz  test.R  test_proj.R
